--- a/RisingTerra/RisingTerra.CSharp.csproj
+++ b/RisingTerra/RisingTerra.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>5.3.5f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -71,9 +73,9 @@
   <ItemGroup>
     <Compile Include="Assets\Controls\MainMenuCommands.cs" />
     <Compile Include="Assets\Fonts\Script\scriptTexttest.cs" />
+    <Compile Include="Assets\GameObjects\Enums.cs" />
     <Compile Include="Assets\GameObjects\World\Biome.cs" />
     <Compile Include="Assets\GameObjects\World\Block.cs" />
-    <Compile Include="Assets\GameObjects\World\Enums.cs" />
     <Compile Include="Assets\GameObjects\World\World.cs" />
     <Compile Include="Assets\MyAssets\TileRenderer.cs" />
     <Compile Include="Assets\PlayerControl.cs" />
